--- a/activitystreams-types/Cargo.toml
+++ b/activitystreams-types/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["activitystreams", "activitypub"]
 edition = "2018"
 
 [dependencies]
+thiserror = "1.0.11"
 activitystreams-derive = { version = "0.2", path = "../activitystreams-derive" }
 activitystreams-traits = { version = "0.2", path = "../activitystreams-traits" }
 chrono = { version = "0.4", features = ["serde"] }
