--- a/services/mediawiki/php/Containerfile
+++ b/services/mediawiki/php/Containerfile
@@ -8,7 +8,7 @@ RUN apk add --no-cache \
 	lua
 
 ADD --chmod=0755 https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
-RUN install-php-extensions calendar intl mbstring opcache apcu pgsql mysqli luasandbox
+RUN install-php-extensions calendar intl mbstring opcache apcu pgsql mysqli luasandbox gd
 RUN rm /usr/local/bin/install-php-extensions
 
 RUN { \
