--- a/Caddyfile
+++ b/Caddyfile
@@ -37,9 +37,10 @@
 
 (httpsec) {
 	header {
-		Strict-Transport-Security "max-age=31536000; includeSubDomains"
 		Access-Control-Allow-Origin *
+		Permissions-Policy "fullscreen=(), geolocation=(), accelerometer=(), ambient-light-sensor=(), bluetooth=(), camera=(), clipboard-read=(), gyroscope=(), microphone=(), magnetometer=()"
 		Referrer-Policy no-referrer
+		Strict-Transport-Security "max-age=31536000; includeSubDomains"
 		X-Content-Type-Options nosniff
 		X-Frame-Options DENY
 		X-XSS-Protection "1; mode=block"
