--- a/services/mediawiki/php/Containerfile
+++ b/services/mediawiki/php/Containerfile
@@ -3,6 +3,7 @@ FROM docker.io/library/php:$VERSION-fpm-alpine
 
 RUN apk add --no-cache \
 	git \
+	imagemagick \
 	# Required for SyntaxHighlighting
 	python3 \
 	lua \
