Revert "Caddy: also handle hostname on xvnet.eu.org"
This reverts commit 82a93fd770edb871f1d59266b4cf6d579044fb97.

--- a/services/caddy/Caddyfile
+++ b/services/caddy/Caddyfile
@@ -6,7 +6,7 @@
 % "$LEONIS_MODULES_DIR/template.sh" bash-tpl "$tpl"
 % done
 
-https://<% $HOSTNAME %> https://<% ${HOSTNAME/xvnet0/xvnet} %> {
+https://<% $HOSTNAME %> {
 	redir / https://w.xvnet.eu.org/w/<% $HOSTNAME %>
 	redir https://w.xvnet.eu.org/w/<% $HOSTNAME %>{path}
 }
