--- a/mw/composer.json
+++ b/mw/composer.json
@@ -189,7 +189,7 @@
 	"extra": {
 		"merge-plugin": {
 			"include": [
-				"composer.local.json"
+				"composer.xvmw.json"
 			],
 			"merge-dev": false
 		}
