--- a/services/mediawiki/Caddyfile
+++ b/services/mediawiki/Caddyfile
@@ -1,9 +1,12 @@
 (mediawiki) {
-	root * /opt/mediawiki
-	php_fastcgi unix//var/run/mediawiki/php-fpm.sock {
-		env MW_WIKI {args[0]}
+	import securitytxt
+	handle {
+		root * /opt/mediawiki
+		php_fastcgi unix//var/run/mediawiki/php-fpm.sock {
+			env MW_WIKI {args[0]}
+		}
+		file_server
 	}
-	file_server
 }
 
 w.xvnet.eu.org w.xvnet0.eu.org http://wiki.xvn {
@@ -15,7 +18,10 @@ meta.w.xvnet.eu.org meta.w.xvnet0.eu.org http://meta.wiki.xvn {
 }
 
 uploads.w.xvnet.eu.org uploads.w.xvnet0.eu.org http://uploads.wiki.xvn {
-	root * /var/lib/mediawiki
-	file_server /images/*
-	redir / https://w.xvnet.eu.org/w/uploads.w.xvnet.eu.org permanent
+	import securitytxt
+	handle {
+		root * /var/lib/mediawiki
+		file_server /images/*
+		redir / https://w.xvnet.eu.org/w/uploads.w.xvnet.eu.org permanent
+	}
 }
